# uchi-experiments

./: .gitignore  README.md  pyproject.toml
Falcon/: todo.md
runs/: bptt_code_best.pt  bptt_code_config.json  bptt_rj_best.pt  bptt_rj_config.json  extend_base_m.txt  joint_run.txt  moe_compare.txt  moe_compare_v2.txt  recall_sweep_results.json  results.csv  rwkv_code_best.pt  rwkv_rj_best.pt  scaling_sweep_v2_results.json  streambptt_code_gulp16_config.json  streambptt_code_gulp16_finalonly_config.json  streambptt_code_gulp32_config.json  streambptt_code_gulp32_finalonly_config.json  streambptt_code_gulp4_config.json  streambptt_code_gulp4_finalonly_config.json  streambptt_code_gulp8_config.json  streambptt_code_gulp8_finalonly_config.json  sweep_log.txt  sweep_log_500.txt  sweep_log_500_v2.txt
src/: bench_arithmetic.py  bench_ducky.py  bench_ducky_agent.py  bitnet.py  build_candidate_tokenizers.py  build_production_tokenizer.py  codec.py  data.py  ducky.py  eeg_codec.py  eval_bptt_retention.py  eval_chinchilla_min.py  eval_early_exit.py  eval_ensemble.py  eval_grounding.py  eval_halting.py  eval_predictor_paths.py  eval_sft.py  eval_step_sequencer.py  eval_tokenizer_fairness.py  extract_chat_corpus.py  extract_code_corpus.py  extract_gutenberg_corpus.py  extract_terminal_corpus.py  fit_scaling_law.py  gen_multimodal_data.py  generate_arithmetic_corpus.py  generate_recall_corpus.py  graph.py  grounding.py  hallucination_probe.py  inference.py  mamba_lite.py  mcts_lite.py  model.py  moe_analysis.py  repair_loop.py  rerun_ml.py  run_adjacent_selective.py  run_dmodel_sweep.py  (+29 more)
tasks/: ducky.md  (+3 more)
(+401 files in other folders)
